security config update